<resources>
    <string name="app_name">Lung Health</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="olvido_contrasena">¿Olvidó su contraseña?</string>
    <string name="lung_health_app">Lung Health App</string>
    <string name="confirmar_contrasena">Confirmar contraseña:</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="email">Correo electrónico:</string>
    <string name="nombre">Nombre:</string>
    <string name="edad">Edad:</string>
    <string name="signin">Iniciar sesión</string>
    <string name="signup">Registrarse</string>
    <string name="nombre_de_usuario">Nombre de usuario:</string>
    <string name="contrasena">Contraseña:</string>
    <string name="log_in">Log-in</string>
    <string name="sign_up">Sign-Up</string>
    <string name="appview">AppView</string>
</resources>