<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:layout_gravity="center"
    tools:context=".login.LoginActivity">

    <TextView
        android:text="@string/lung_health_app"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="45dp"
        android:textStyle="bold|normal"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="2"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/switch_tumbs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/logIn"
                    android:text="@string/log_in"
                    android:paddingTop="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:textStyle="bold|normal"
                    android:background="@drawable/switch_trcks"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/signUp"
                    android:text="@string/sign_up"
                    android:paddingTop="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/mainBlue"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:textStyle="bold|normal"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/logInLayout"
                android:background="@color/white"
                android:padding="25dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/nombre_de_usuario"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPersonName"
                        android:id="@+id/username"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/contrasena"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:endIconMode="password_toggle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPassword"
                        android:id="@+id/password"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:textSize="11sp"
                    android:text="@string/olvido_contrasena"
                    android:textAlignment="center"
                    android:textColor="#616161"
                    android:textStyle="normal"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/signUpLayout"
                android:background="@color/white"
                android:padding="25dp"
                android:visibility="gone"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/nombre"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPersonName"
                        android:id="@+id/sname"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/edad"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="number"
                        android:id="@+id/sedad"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/nombre_de_usuario"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPersonName"
                        android:id="@+id/susername"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/email"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textEmailAddress"
                        android:id="@+id/semail"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/contrase_a"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:endIconMode="password_toggle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPassword"
                        android:id="@+id/spassword"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/confirmar_contrasena"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:endIconMode="password_toggle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPassword"
                        android:id="@+id/sconfirm_password"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/logInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:elevation="15dp"
                android:gravity="center"
                android:text="@string/iniciar_sesion"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="normal|bold"
                app:backgroundTint="@color/mainBlue"
                app:shapeAppearanceOverlay="@style/Button5" />

            <Button
                android:id="@+id/signUpButton"
                android:text="@string/signup"
                android:textSize="17sp"
                android:textAllCaps="false"
                android:elevation="15dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textStyle="normal|bold"
                android:visibility="gone"
                app:shapeAppearanceOverlay="@style/Button5"
                app:backgroundTint="@color/mainBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/doctoImage"
        android:layout_width="274dp"
        android:layout_height="159dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/doctor_fig"
        android:contentDescription="@string/appview" />

</LinearLayout>